# rs-git-fsmonitor

./: Cargo.toml
src/: main.rs
